[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
dotenv = "0.15"
bytes = "1.3"
sscanf = "0.4"
uuid = {version = "1.2", features = ["v4"]}
regex = "1.5"